Minor changes in main page

--- a/files/portfolio.html
+++ b/files/portfolio.html
@@ -15,7 +15,7 @@
             <div class="header">
             <h1 class="name">Megha Mittal</h1>
             <h2 class="identity">Student at NIIT University</h2>
-            <p class="profession">Frontend Web Developer</p>
+            <p class="profession">I have passion for building beautiful and user friendly websites.</p>
             </div>
 
             <div class="nav">
@@ -34,9 +34,7 @@
         </div>
         <div class="right">
             <div id="About">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro excepturi blanditiis veritatis reprehenderit quia perferendis ea eligendi. Eveniet id ex doloremque soluta laudantium! Vitae deserunt ut mollitia ex laborum?
-                Illo voluptates quos possimus quia modi ab reiciendis voluptate? Quidem cupiditate quaerat dignissimos eius natus porro incidunt, vero commodi ipsum velit nobis quae sed magni ratione! Unde aliquid accusantium et?
-                Itaque, praesentium corporis nobis, iure iste debitis repellat ab quidem hic officiis cumque rerum odio excepturi placeat blanditiis. Quia vero nostrum rerum accusamus fugiat molestias sequi, unde quos possimus culpa.</p>
+                <p> I am a computer science student, driven by curiosity and a strong desire for personal growth. My proficiency in <strong> Python and Java</strong> is complemented by my active pursuit of expanding my skill set in <strong> Frontend Web development</strong>, while also nurturing my talents in UI/UX design. With practical experience in <strong> MySQL, HTML, CSS, Javascript ,Bootstrap and PostgreSQL </strong>, I possess <strong> problem-solving and critical thinking skills </strong> enable me to tackle complex projects with ease.</p>
             </div>
          
         <div id="Education">
