--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </ul>
           <ul class="socially">
             <li><a href="https://www.linkedin.com/in/mittal-megha"><img src="./Images/linkedin.png" alt=""></a></li>
-            <li><a href="https://github.com/Megha211"><img src="Images/github.png" alt=""></a></li>
+            <li><a href="https://github.com/Megha211"><img src="Images/icons8-github-48.png" alt=""></a></li>
             <li><a href="gmail.html"><img src="Images/gmail.png" alt=""></a></li>
         </ul>
         </div>
@@ -73,7 +73,7 @@
           <strong> Frontend Web development</strong>, while also nurturing my
           talents in UI/UX design. With practical experience in
           <strong>
-            MySQL, HTML, CSS, Javascript ,Bootstrap and PostgreSQL </strong
+            MySQL, HTML, CSS, Javascript , and PostgreSQL </strong
           >, I possess
           <strong> problem-solving and critical thinking skills </strong> enable
           me to tackle complex projects with ease.
@@ -107,7 +107,7 @@
             </div>
           </div>
           <a
-            href="https://docs.google.com/document/d/1q8jJr_1EFHidkzdRjOKUjImstXkW_cPE/edit"
+            href="https://drive.google.com/file/d/1RQWuXPMXK4_xSHQIG2PsdwUhWbkT24TI/view?usp=drive_link"
             class="resume"
             >View my Full Resume -></a
           >
